--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "dicemaiden-rs"
 version = "1.5.0"
 edition = "2024"
-rust-version = "1.87.0"
+rust-version = "1.90.0"
 keywords = ["discord", "bot", "dice", "rpg", "tabletop"]
 
 [[bin]]
@@ -41,6 +41,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
 dotenv = "0.15"
 sysinfo = "0.36"
+
+# Security fix for CVE-2026-25727: Force safe version of time crate
+time = ">=0.3.47"
 
 [profile.release]
 # Optimizations for production builds
